--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Dutchaug.org</title>
+  <title>DutchAUG.org</title>
   <meta name="description" content="">
-
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
 </head>
 
 <body>
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Dutchaug.org</h1>
+      <h1 class="title">DutchAUG.org</h1>
     </header>
     <div id="container">
       <p class="tagline"></p>
@@ -36,14 +34,10 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h3>Welcome to GitHub Pages.</h3>
+          <h3>Welcome to the DutchAUG.org site.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
