--- a/index1.html
+++ b/index1.html
@@ -27,9 +27,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/dennisg/dutchaug.org/tarball/master" class="download-button tar"><span>Download</span></a>
+<!--           <a href="https://github.com/dennisg/dutchaug.org/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/dennisg/dutchaug.org/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/dennisg/dutchaug.org" class="code">fork Dutchaug.org on GitHub</a>
+ -->          <a href="https://github.com/dennisg/dutchaug.org" class="code">fork Dutchaug.org on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
