removed the 'recent' mention

--- a/meetups.html
+++ b/meetups.html
@@ -6,7 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<h2>Recent Meetups</h2>
+<h2>Meetups</h2>
 <ul>
 {% assign pages_list = site.pages %}
 {% assign group = 'meetup' %}
